# uFastAuthD3

./: .clang-tidy  .gitignore  AGENTS.md  AUTHORS  BUILD.md  CMakeLists.txt  LICENSE  PROJECT_STRUCTURE.md  README.md  SECURITY.md  dashboard.html  uFastAuthD.pro
docs/: ARCHITECTURE.md  BUILD.md  CERTIFICATES.md  CONFIG.md  INIT.md  OPERATION.md  SECURITY.md
etc/ufastauthd/: config.ini
etc/ufastauthd2/: config.ini  jwt_secret.key  ufastauthd2.conf
etc/ufastauthd2/jwt/: hmac_secret.key
etc/ufastauthd3/: ufastauthd3.conf  web_admin.conf  web_adminportal.conf  web_appsync.conf  web_authhandler.conf  web_login.conf  web_loginportal.conf  web_portal_admin.conf  web_portal_login.conf  web_portal_user.conf  web_useradmin.conf  web_useradminportal.conf  web_userportal.conf
rpm/: build.spec
src/: authstorageimpl.cpp  authstorageimpl.h  config.h.in  defs.h  globals.cpp  globals.h  loginauthmethods.cpp  loginauthmethods.h  loginrpcserverimpl.cpp  loginrpcserverimpl.h  main.cpp  webserverimpl.cpp  webserverimpl.h
src/AppSync/: appsync_apiendpoints.cpp  appsync_apiendpoints.h  appsync_serverimpl.cpp
src/IdentityManager/: credentialdata.cpp  credentialdata.h  credentialvalidator.cpp  credentialvalidator.h  domains.cpp  domains.h  ds_account.h  ds_application.h  ds_authentication.h  ds_security_events.h  identitymanager.cpp  identitymanager.h  identitymanager_accounts.cpp  identitymanager_authentication.cpp  identitymanager_db.cpp  identitymanager_db.h  identitymanager_db_account_detailfields.cpp  identitymanager_db_accounts.cpp  identitymanager_db_application.cpp  identitymanager_db_application_activities.cpp  identitymanager_db_application_attributes.cpp  identitymanager_db_application_roles.cpp  identitymanager_db_application_scopes.cpp  identitymanager_db_authentication.cpp  identitymanager_db_authentication_credentials.cpp  identitymanager_db_authentication_schemes.cpp  identitymanager_db_authentication_sessions.cpp  identitymanager_db_authentication_slots.cpp  identitymanager_db_roles.cpp  multicredentialdata.cpp  multicredentialdata.h  transient_auth_context.cpp  transient_auth_context.h
src/RPC1LoginServer2/: fastrpcimpl.cpp  fastrpcimpl.h  loginauthproxymethods.cpp  loginauthproxymethods.h  rpc1loginserver2impl.cpp  rpc1loginserver2impl.h
src/Tokens/: tokensmanager.cpp  tokensmanager.h
src/Web/AdminPortal/: adminportal_endpoints.cpp  adminportal_endpoints.h  adminportal_endpoints_account_credentials.cpp  adminportal_endpoints_account_credentials.h  adminportal_endpoints_accounts.cpp  adminportal_endpoints_accounts.h  adminportal_endpoints_accounts_credentials.h  adminportal_endpoints_application_activities.cpp  adminportal_endpoints_application_activities.h  adminportal_endpoints_application_roles.cpp  adminportal_endpoints_application_roles.h  adminportal_endpoints_application_scopes.cpp  adminportal_endpoints_application_scopes.h  adminportal_endpoints_applications.cpp  adminportal_endpoints_applications.h  adminportal_endpoints_authcontroller.cpp  (+12 more)
src/WebAdmin/: webadmin_endpoints.cpp  webadmin_endpoints.h  webadmin_endpoints_accounts.cpp  webadmin_endpoints_accounts.h  webadmin_endpoints_application_activities.cpp  webadmin_endpoints_application_activities.h  webadmin_endpoints_application_roles.cpp  webadmin_endpoints_application_roles.h  webadmin_endpoints_application_scopes.cpp  webadmin_endpoints_application_scopes.h  webadmin_endpoints_applications.cpp  webadmin_endpoints_applications.h  webadmin_endpoints_authcontroller.cpp  webadmin_endpoints_authcontroller.h  webadmin_methods.cpp  webadmin_methods.h  webadmin_methods_accounts.cpp  webadmin_methods_accounts.h  webadmin_methods_application_activities.cpp  webadmin_methods_application_activities.h  webadmin_methods_application_roles.cpp  webadmin_methods_application_roles.h  webadmin_methods_application_scopes.cpp  webadmin_methods_application_scopes.h  webadmin_methods_applications.cpp  webadmin_methods_applications.h  webadmin_methods_applications_scopes.cpp  webadmin_methods_applications_scopes.h  webadmin_methods_applicationspermissions.cpp  webadmin_methods_applicationspermissions.h  webadmin_methods_authcontroller.cpp  webadmin_methods_authcontroller.h  webadmin_methods_roles.cpp  webadmin_methods_roles.h  webadmin_serverimpl.cpp  webadmin_serverimpl.h
src/WebLogin/: logindirectorymanager.h  weblogin_add_endpoints.cpp  weblogin_add_endpoints.h  weblogin_authmethods.cpp  weblogin_authmethods.h  weblogin_authmethods_authorization.cpp  weblogin_authmethods_credentials.cpp  weblogin_authmethods_logout.cpp  weblogin_authmethods_registration.cpp  weblogin_authmethods_tokens.cpp  weblogin_authmethods_webapps_tokens.cpp  weblogin_serverimpl.cpp  weblogin_serverimpl.h
src/WebSessionAuthHandler/: websessionauthhandler_authmethods.cpp  websessionauthhandler_authmethods.h  websessionauthhandler_authmethods_webapps_tokens.cpp  websessionauthhandler_serverimpl.cpp  websessionauthhandler_serverimpl.h
src/webadmin/: webadmin_methods.cpp  webadmin_methods.h  webadmin_methods_accounts.cpp  webadmin_methods_accounts.h  webadmin_methods_applications.cpp  webadmin_methods_applications.h  webadmin_methods_applicationspermissions.cpp  webadmin_methods_applicationspermissions.h  webadmin_methods_roles.cpp  webadmin_methods_roles.h  webadmin_serverimpl.cpp  webadmin_serverimpl.h
src/weblogin/: logindirectorymanager.cpp  weblogin_authmethods.cpp  weblogin_authmethods.h  weblogin_authmethods_accountcredentialpublicdata.cpp  weblogin_authmethods_authorize.cpp  weblogin_authmethods_changecredential.cpp  weblogin_authmethods_getapplicationauthcallbackuri.cpp  weblogin_authmethods_listcredentials.cpp  weblogin_authmethods_logout.cpp  weblogin_authmethods_preauthorize.cpp  weblogin_authmethods_refreshaccesstoken.cpp  weblogin_authmethods_refreshrefreshertoken.cpp  weblogin_authmethods_registeraccount.cpp  weblogin_authmethods_retokenize.cpp  weblogin_authmethods_tempmfatoken.cpp  weblogin_authmethods_token.cpp  weblogin_serverimpl.cpp  weblogin_serverimpl.h
var/www/: README.md  README.txt  build-qrcode.js  package.json
(+296 files in other folders)
